<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Divide And De-Stress</string>
    <string name="action_settings">Settings</string>
    <string name="edit_name">Title your assignment</string>
    <string name="label_name">Title:</string>
    <string name="label_number_units">Pages to read:</string>
    <string name="label_due">Days to finish:</string>
    <string name="button_save">SAVE</string>
    <string name="display_name">
        Title: <xliff:g example="Assignment 1" id="name">%s</xliff:g>
    </string>
    <string name="list_item_due">
        <xliff:g example="0" id="due">%d</xliff:g> days remaining
    </string>
    <string name="display_units_per_day">
        <xliff:g example="0.0" id="perDay">%1$.1f</xliff:g> pages per day
    </string>
    <string name="display_completed">
        <xliff:g example="0" id="completed">%d</xliff:g> of <xliff:g example="0" id="total">%d</xliff:g> pages completed
    </string>
    <string name="display_units_remaining">
        <xliff:g example="0" id="remaining">%d</xliff:g> pages remaining
    </string>
    <string name="list_item_date">
        Date Due: <xliff:g example="2030/04/18" id="dueDate">%s</xliff:g>
    </string>
    <string name="create_title">Create New</string>
    <string name="prefix">assign-</string>
    <string name="hint_name">Choose a title</string>
    <string name="hint_enter_number">Enter a number</string>
    <string name="name_edit">Edit Saved</string>
    <string name="label_completed">Completed pages:</string>
    <string name="label_total">Total pages:</string>
    <string name="label_edit_due">Days remaining:</string>
    <string name="label_edit_start">Total Days:</string>
    <string name="edit_date">Select a Date</string>
    <string name="label_edit_date">Date Due:</string>
    <string name="display_date_output">
         <xliff:g example="2000" id="year">%d</xliff:g> / <xliff:g example="1" id="month">%d</xliff:g> / <xliff:g example="1" id="day">%d</xliff:g>
    </string>
</resources>
